# sword

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  wordle.rs
crates/swordle/: Cargo.toml
crates/swordle-analyzer/: Cargo.toml
crates/swordle-solver/: Cargo.toml
crates/swordle-solver/src/: lib.rs  strategy.rs
crates/swordle/src/: game.rs  guess.rs  letter_bank.rs  lib.rs  main.rs  placement.rs  word.rs
crates/swordle/src/game/: outcome.rs  playing.rs
crates/swordle/src/word/: bank.rs  impls.rs  tests.rs
games/wordle/: Cargo.toml
games/wordle/src/: alphabet.rs  dict.rs  game.rs  guess.rs  lib.rs  word.rs
games/wordle/src/dict/: hash_dict.rs  slice_dict.rs
games/wordle/src/game/: outcome.rs  playing.rs
games/wordle/src/word/: bank.rs
