[workspace]
resolver = "3"
members = ["crates/swordle", "crates/swordle-analyzer", "crates/swordle-solver"]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.lints]
clippy = { pedantic = "warn" }

[workspace.dependencies]
swordle = { path = "crates/swordle" }
colored = "3.0.0"
rand = "0.9.1"
thiserror = "2.0.12"
